--- a/index.html
+++ b/index.html
@@ -1,96 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="/_vercel/insights/script.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
-    <title>Vercel HTML Starter</title>
-    <meta
-      name="description"
-      content="High-performance HTML based website template."
-    />
-  </head>
-  <body>
-    <h1>Vercel HTML Starter</h1>
-    <p>
-      This template is a simple, but powerful single
-      <code>index.html</code> file deployed to
-      <a href="https://vercel.com">Vercel</a>. When your site is deployed, all
-      static assets (like HTML, JavaScript, CSS, images, and more) are deployed
-      globally to every
-      <a href="https://vercel.com/docs/concepts/edge-network/overview"
-        >Vercel Edge Network</a
-      >
-      region.
-    </p>
-    <h2>Simple, privacy-friendly analytics</h2>
-    <p>
-      Want to understand your visitor traffic? Vercel Analytics gives you
-      first-party, privacy-friendly traffic analytics for your HTML site. This
-      template is already configured using the following script:
-    </p>
-    <pre><code>&lt;script defer src="/_vercel/insights/script.js"&gt;&lt;/script&gt;</code></pre>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/analytics">Vercel Analytics</a>.
-    </p>
-    <h2>Integrated with git</h2>
-    <p>
-      Deploying updates to your site is as simple as
-      <code>git push</code> thanks to Vercel's advanced
-      <a href="https://vercel.com/docs/concepts/git">Git Integration</a>.
-      Support for GitHub, GitLab, Bitbucket is zero-configuration, and with the
-      flexible Vercel CLI and API, you can integrate with any tool possible.
-    </p>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/git">Git Integration</a>.
-    </p>
-    <h2>Fast <code>gzip</code> compression</h2>
-    <p>
-      To help ensure the smallest possible file sizes for your static assets,
-      the Vercel Edge Network compresses files by default using
-      <code>gzip</code>. You can also optionally use
-      <code>brotli</code> compressesion if you prefer.
-    </p>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/edge-network/compression"
-        >compression</a
-      >.
-    </p>
-    <h2>Advanced routing configuration</h2>
-    <p>
-      Vercel gives you a variety of ways to configure the routing of your
-      website. For example, adding redirects, rewrites, or headers to your page.
-      While you can use <code>vercel.json</code> to define these through JSON,
-      you can also express your routing configuration as code using
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
-      >.
-    </p>
-    <p>
-      Middleware runs before the
-      <a href="https://vercel.com/docs/concepts/edge-network/caching"
-        >Vercel Edge Network Cache</a
-      >, so you can configure routing exactly as your application needs. For
-      example, this template uses <code>middleware.js</code> defined in the root
-      of the repository to add additional security headers to the site:
-    </p>
-    <pre><code>referrer-policy: origin-when-cross-origin
-strict-transport-security: max-age=31536000; includeSubDomains; preload
-x-content-type-options: nosniff
-x-dns-prefetch-control: on
-x-frame-options: DENY</code></pre>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
-      >.
-    </p>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ismail Khan's Portfolio</title>
+</head>
+<body style="font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333;">
+    <header style="background-color: #282c34; color: white; text-align: center; padding: 50px 0;">
+        <div style="width: 80%; margin: 0 auto;">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+                <div style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden; margin-bottom: 20px;">
+                    <img src="your-photo.jpg" alt="Ismail Khan" style="width: 100%; height: auto;">
+                </div>
+                <h1 style="font-size: 2.5em; margin: 0;">Ismail Khan</h1>
+                <p style="font-size: 1.2em; margin: 0.5em 0;">Data Engineer & Web Developer</p>
+            </div>
+        </div>
+    </header>
+    <section style="padding: 50px 0;">
+        <div style="width: 80%; margin: 0 auto;">
+            <h2 style="text-align: center; font-size: 2em; margin-bottom: 20px;">About Me</h2>
+            <p style="text-align: center; font-size: 1.1em; line-height: 1.6;">
+                Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer and web developer with experience in SQL, Docker, and web development. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.
+            </p>
+        </div>
+    </section>
+    <section style="padding: 50px 0;">
+        <div style="width: 80%; margin: 0 auto;">
+            <h2 style="text-align: center; font-size: 2em; margin-bottom: 20px;">Projects</h2>
+            <div style="margin: 20px 0;">
+                <h3 style="font-size: 1.5em; margin-bottom: 10px;">Project 1</h3>
+                <p style="text-align: center; font-size: 1.1em; line-height: 1.6;">Description of project 1.</p>
+            </div>
+            <div style="margin: 20px 0;">
+                <h3 style="font-size: 1.5em; margin-bottom: 10px;">Project 2</h3>
+                <p style="text-align: center; font-size: 1.1em; line-height: 1.6;">Description of project 2.</p>
+            </div>
+        </div>
+    </section>
+    <section style="padding: 50px 0;">
+        <div style="width: 80%; margin: 0 auto;">
+            <h2 style="text-align: center; font-size: 2em; margin-bottom: 20px;">Contact</h2>
+            <p style="text-align: center; font-size: 1.2em;">Email: ismail@example.com</p>
+            <p style="text-align: center; font-size: 1.2em;">
+                LinkedIn: <a href="https://www.linkedin.com/in/ismailkhan" target="_blank" style="color: #0066cc; text-decoration: none;">linkedin.com/in/ismailkhan</a>
+            </p>
+        </div>
+    </section>
+</body>
 </html>
