--- a/index.html
+++ b/index.html
@@ -4,47 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ismail Khan's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333;">
-    <header style="background-color: #282c34; color: white; text-align: center; padding: 50px 0;">
-        <div style="width: 80%; margin: 0 auto;">
-            <div style="display: flex; flex-direction: column; align-items: center;">
-                <div style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden; margin-bottom: 20px;">
-                    <img src="your-photo.jpg" alt="Ismail Khan" style="width: 100%; height: auto;">
+<body>
+    <header class="banner">
+        <div class="container">
+            <div class="banner-content">
+                <div class="photo-circle">
+                    <img src="your-photo.jpg" alt="Ismail Khan">
                 </div>
-                <h1 style="font-size: 2.5em; margin: 0;">Ismail Khan</h1>
-                <p style="font-size: 1.2em; margin: 0.5em 0;">Data Engineer & Web Developer</p>
+                <h1>Ismail Khan</h1>
+                <p>Data Engineer & Web Developer</p>
             </div>
         </div>
     </header>
-    <section style="padding: 50px 0;">
-        <div style="width: 80%; margin: 0 auto;">
-            <h2 style="text-align: center; font-size: 2em; margin-bottom: 20px;">About Me</h2>
-            <p style="text-align: center; font-size: 1.1em; line-height: 1.6;">
-                Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer and web developer with experience in SQL, Docker, and web development. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.
-            </p>
+    <section class="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer and web developer with experience in SQL, Docker, and web development. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.</p>
         </div>
     </section>
-    <section style="padding: 50px 0;">
-        <div style="width: 80%; margin: 0 auto;">
-            <h2 style="text-align: center; font-size: 2em; margin-bottom: 20px;">Projects</h2>
-            <div style="margin: 20px 0;">
-                <h3 style="font-size: 1.5em; margin-bottom: 10px;">Project 1</h3>
-                <p style="text-align: center; font-size: 1.1em; line-height: 1.6;">Description of project 1.</p>
+    <section class="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project-item">
+                <h3>Project 1</h3>
+                <p>Description of project 1.</p>
             </div>
-            <div style="margin: 20px 0;">
-                <h3 style="font-size: 1.5em; margin-bottom: 10px;">Project 2</h3>
-                <p style="text-align: center; font-size: 1.1em; line-height: 1.6;">Description of project 2.</p>
+            <div class="project-item">
+                <h3>Project 2</h3>
+                <p>Description of project 2.</p>
             </div>
         </div>
     </section>
-    <section style="padding: 50px 0;">
-        <div style="width: 80%; margin: 0 auto;">
-            <h2 style="text-align: center; font-size: 2em; margin-bottom: 20px;">Contact</h2>
-            <p style="text-align: center; font-size: 1.2em;">Email: ismail@example.com</p>
-            <p style="text-align: center; font-size: 1.2em;">
-                LinkedIn: <a href="https://www.linkedin.com/in/ismailkhan" target="_blank" style="color: #0066cc; text-decoration: none;">linkedin.com/in/ismailkhan</a>
-            </p>
+    <section class="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Email: ismail@example.com</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/ismailkhan" target="_blank">linkedin.com/in/ismailkhan</a></p>
         </div>
     </section>
 </body>
