--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="banner-content">
                 <div class="photo-circle">
-                    <img src="Profile.jpg" alt="Ismail Khan">
+                    <img src="your-photo.jpg" alt="Ismail Khan">
                 </div>
                 <h1>Ismail Khan</h1>
                 <p>Data Engineer & Web Developer</p>
@@ -24,24 +24,34 @@
             <p>Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer and web developer with experience in SQL, Docker, and web development. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.</p>
         </div>
     </section>
-    <section class="projects">
+    <section class="experience">
         <div class="container">
-            <h2>Projects</h2>
-            <div class="project-item">
-                <h3>Project 1</h3>
-                <p>Description of project 1.</p>
+            <h2>Experience</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>Jul 2024 - Present · 1 mo</h3>
+                    <h4>Software engineer fellowship</h4>
+                    <p>Headstarter AI · Full-time</p>
+                    <p>New York, United States · Remote</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>12/07/2023 – 12/09/2023</h3>
+                    <h4>Python Developer</h4>
+                    <p>Higher Education Commission Pakistan (HEC)</p>
+                    <p>Islamabad, Pakistan</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>03/2022 – 04/03/2024</h3>
+                    <h4>Business Analyst</h4>
+                    <p>O2LinkX</p>
+                    <p>Islamabad, Pakistan</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Remote, Pakistan</h3>
+                    <h4>Data Engineering Fellow</h4>
+                    <p>Bytewise Limited</p>
+                </div>
             </div>
-            <div class="project-item">
-                <h3>Project 2</h3>
-                <p>Description of project 2.</p>
-            </div>
-        </div>
-    </section>
-    <section class="contact">
-        <div class="container">
-            <h2>Contact</h2>
-            <p>Email: ismail@example.com</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/ismailkhan" target="_blank">linkedin.com/in/ismailkhan</a></p>
         </div>
     </section>
 </body>
