--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="banner-content">
                 <div class="photo-circle">
-                    <img src="your-photo.jpg" alt="Ismail Khan">
+                    <img src="Profile.jpg" alt="Ismail Khan">
                 </div>
                 <h1>Ismail Khan</h1>
                 <p>Data Engineer & Web Developer</p>
