--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
             <h2>Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
+                    <h3>June 2024 - Present · 2 mo</h3>
+                    <h4>Data Engineering Fellow</h4>
+                    <p>Bytewise Limited</p>
+                    <p>Remote, Islamabad</p>
+                </div>
+                <div class="timeline-item">
                     <h3>Jul 2024 - Present · 1 mo</h3>
-                    <h4>Software engineer fellowship</h4>
+                    <h4>Software Engineer Fellowship</h4>
                     <p>Headstarter AI · Full-time</p>
                     <p>New York, United States · Remote</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>12/07/2023 – 12/09/2023</h3>
+                    <h3>12/07/2023 – 12/09/2023 2 mo</h3>
                     <h4>Python Developer</h4>
                     <p>Higher Education Commission Pakistan (HEC)</p>
                     <p>Islamabad, Pakistan</p>
@@ -46,11 +52,7 @@
                     <p>O2LinkX</p>
                     <p>Islamabad, Pakistan</p>
                 </div>
-                <div class="timeline-item">
-                    <h3>Remote, Pakistan</h3>
-                    <h4>Data Engineering Fellow</h4>
-                    <p>Bytewise Limited</p>
-                </div>
+
             </div>
         </div>
     </section>
