--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <p>New York, United States · Remote</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>12/07/2023 – 12/09/2023 · 2 mo</h3>
+                    <h3>07/2023 – 09/2023 · 2 mo</h3>
                     <h4>Python Developer</h4>
                     <p>Higher Education Commission Pakistan (HEC)</p>
                     <p>Islamabad, Pakistan</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>03/2022 – 04/03/2024</h3>
+                    <h3>03/2022 – 03/2024 2 yea</h3>
                     <h4>Business Analyst</h4>
                     <p>O2LinkX</p>
                     <p>Islamabad, Pakistan</p>
