--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
             </div>
         </div>
     </section>
+    <section class="volunteer">
+    <div class="container">
+        <h2>Volunteer Work</h2>
+        <div class="volunteer-timeline">
+            <div class="volunteer-item">
+                <h3>1/07/2022 – 01/07/2023</h3>
+                <h4>Marketing Lead</h4>
+                <p>Google Developer Student Club - NUML</p>
+            </div>
+            <div class="volunteer-item">
+                <h3>01/01/2023 – 01/12/2023</h3>
+                <h4>Social Media Designer</h4>
+                <p>Computer Science Society NUML</p>
+            </div>
+            <div class="volunteer-item">
+                <h3>3/01/2022 – 09/04/2023</h3>
+                <h4>Core Team Member</h4>
+                <p>Computer Science Society NUML</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
