--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
         </div>
     </div>
 </section>
-
+<section class="certificates">
+    <div class="container">
+        <h2>Certificates</h2>
+        <div class="certificates-grid">
+            <div class="certificate-item">QL Intermediate</div>
+            <div class="certificate-item">SQL Introduction</div>
+            <div class="certificate-item">Understanding Data Engineering</div>
+            <div class="certificate-item">Introduction to Data Engineering</div>
+            <div class="certificate-item">Python Sekho Challenge</div>
+            <div class="certificate-item">Python Data Structures</div>
+            <div class="certificate-item">Exploring and Analyzing Fifa's Datasets Using Python</div>
+            <div class="certificate-item">Programming for Everybody (Getting Started with Python)</div>
+            <div class="certificate-item">Introduction to Networking and Storage</div>
+            <div class="certificate-item">Supervised Machine Learning</div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
