--- a/index.html
+++ b/index.html
@@ -82,19 +82,20 @@
 <section class="certificates">
     <div class="container">
         <h2>Certificates</h2>
-        <div class="certificates-grid">
-            <div class="certificate-item">QL Intermediate</div>
-            <div class="certificate-item">SQL Introduction</div>
-            <div class="certificate-item">Understanding Data Engineering</div>
-            <div class="certificate-item">Introduction to Data Engineering</div>
-            <div class="certificate-item">Python Sekho Challenge</div>
-            <div class="certificate-item">Python Data Structures</div>
-            <div class="certificate-item">Exploring and Analyzing Fifa's Datasets Using Python</div>
-            <div class="certificate-item">Programming for Everybody (Getting Started with Python)</div>
-            <div class="certificate-item">Introduction to Networking and Storage</div>
-            <div class="certificate-item">Supervised Machine Learning</div>
-        </div>
+        <ul class="certificates-list">
+            <li>QL Intermediate</li>
+            <li>SQL Introduction</li>
+            <li>Understanding Data Engineering</li>
+            <li>Introduction to Data Engineering</li>
+            <li>Python Sekho Challenge</li>
+            <li>Python Data Structures</li>
+            <li>Exploring and Analyzing Fifa's Datasets Using Python</li>
+            <li>Programming for Everybody (Getting Started with Python)</li>
+            <li>Introduction to Networking and Storage</li>
+            <li>Supervised Machine Learning</li>
+        </ul>
     </div>
 </section>
+
 </body>
 </html>
