--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container">
         <h2>Certificates</h2>
         <ul class="certificates-list">
-            <li>QL Intermediate</li>
+            <li>SQL Intermediate</li>
             <li>SQL Introduction</li>
             <li>Understanding Data Engineering</li>
             <li>Introduction to Data Engineering</li>
