--- a/index.html
+++ b/index.html
@@ -96,6 +96,26 @@
         </ul>
     </div>
 </section>
+<section class="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-container">
+        <form action="your_form_handling_script.php" method="post">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit">Send</button>
+        </form>
+    </div>
+</section>
 
 </body>
 </html>
