--- a/index.html
+++ b/index.html
@@ -96,26 +96,16 @@
         </ul>
     </div>
 </section>
-<section class="contact">
-    <h2>Contact Me</h2>
-    <div class="contact-container">
-        <form action="your_form_handling_script.php" method="post">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
-            <button type="submit">Send</button>
-        </form>
+<section class="connect">
+    <h2>Connect with Me</h2>
+    <div class="connect-container">
+        <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank" class="linkedin-link">
+            <img src="linkedin-logo.png" alt="LinkedIn Logo">
+            <span>Connect on LinkedIn</span>
+        </a>
     </div>
 </section>
+
 
 </body>
 </html>
