--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ismail Khan's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div id="background"></div>
@@ -100,11 +101,12 @@
     <h2>Connect with Me</h2>
     <div class="connect-container">
         <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank" class="linkedin-link">
-            <img src="linkedin-logo.png" alt="LinkedIn Logo">
+            <i class="fab fa-linkedin"></i>
             <span>Connect on LinkedIn</span>
         </a>
     </div>
 </section>
+
 
 
 </body>
