--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section class="connect">
     <h2>Connect with Me</h2>
     <div class="connect-container">
-        <a href="www.linkedin.com/in/ismail-khan007" target="_blank" class="linkedin-link">
+        <a href="https://www.linkedin.com/in/ismail-khan007/" target="_blank" class="linkedin-link">
             <i class="fab fa-linkedin"></i>
             <span>Connect on LinkedIn</span>
         </a>
