--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <header class="banner">
         <div class="container">
             <div class="banner-content">
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#volunteer">Volunteer</a></li>
+                        <li><a href="#certificates">Certificates</a></li>
+                        <li><a href="#connect">Connect</a></li>
+                    </ul>
+                </nav>
                 <div class="photo-circle">
                     <img src="Profile.jpg" alt="Ismail Khan">
                 </div>
@@ -21,13 +30,13 @@
             </div>
         </div>
     </header>
-    <section class="about">
+    <section id="about" class="about">
         <div class="container">
             <h2>About Me</h2>
             <p>Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer and web developer with experience in SQL, Docker, and web development. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.</p>
         </div>
     </section>
-    <section class="experience">
+    <section id="experience" class="experience">
         <div class="container">
             <h2>Experience</h2>
             <div class="timeline">
@@ -38,7 +47,7 @@
                     <p>Remote, Islamabad</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>Jul 2024 - Present · 1 mo</h4>
+                    <h3>Jul 2024 - Present · 1 mo</h3>
                     <h4>Software Engineer Fellowship</h4>
                     <p>Headstarter AI · Full-time</p>
                     <p>New York, United States · Remote</p>
@@ -58,56 +67,53 @@
             </div>
         </div>
     </section>
-    <section class="volunteer">
-    <div class="container">
-        <h2>Volunteer Work</h2>
-        <div class="volunteer-timeline">
-            <div class="volunteer-item">
-                <h3>07/2022 – 07/2023</h3>
-                <h4>Marketing Lead</h4>
-                <p>GDSC NUML</p>
-            </div>
-            <div class="volunteer-item">
-                <h3>01/2023 – 12/2023</h3>
-                <h4>Social Media Designer</h4>
-                <p>Computer Science Society NUML</p>
-            </div>
-            <div class="volunteer-item">
-                <h3>01/2022 – 04/2023</h3>
-                <h4>Core Team Member</h4>
-                <p>GDSC NUML</p>
+    <section id="volunteer" class="volunteer">
+        <div class="container">
+            <h2>Volunteer Work</h2>
+            <div class="volunteer-timeline">
+                <div class="volunteer-item">
+                    <h3>07/2022 – 07/2023</h3>
+                    <h4>Marketing Lead</h4>
+                    <p>GDSC NUML</p>
+                </div>
+                <div class="volunteer-item">
+                    <h3>01/2023 – 12/2023</h3>
+                    <h4>Social Media Designer</h4>
+                    <p>Computer Science Society NUML</p>
+                </div>
+                <div class="volunteer-item">
+                    <h3>01/2022 – 04/2023</h3>
+                    <h4>Core Team Member</h4>
+                    <p>GDSC NUML</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="certificates">
-    <div class="container">
-        <h2>Certificates</h2>
-        <ul class="certificates-list">
-            <li>SQL Intermediate</li>
-            <li>SQL Introduction</li>
-            <li>Understanding Data Engineering</li>
-            <li>Introduction to Data Engineering</li>
-            <li>Python Sekho Challenge</li>
-            <li>Python Data Structures</li>
-            <li>Exploring and Analyzing Fifa's Datasets Using Python</li>
-            <li>Programming for Everybody (Getting Started with Python)</li>
-            <li>Introduction to Networking and Storage</li>
-            <li>Supervised Machine Learning</li>
-        </ul>
-    </div>
-</section>
-<section class="connect">
-    <h2>Connect with Me</h2>
-    <div class="connect-container">
-        <a href="https://www.linkedin.com/in/ismail-khan007/" target="_blank" class="linkedin-link">
-            <i class="fab fa-linkedin"></i>
-            <span>Connect on LinkedIn</span>
-        </a>
-    </div>
-</section>
-
-
-
+    </section>
+    <section id="certificates" class="certificates">
+        <div class="container">
+            <h2>Certificates</h2>
+            <ul class="certificates-list">
+                <li>SQL Intermediate</li>
+                <li>SQL Introduction</li>
+                <li>Understanding Data Engineering</li>
+                <li>Introduction to Data Engineering</li>
+                <li>Python Sekho Challenge</li>
+                <li>Python Data Structures</li>
+                <li>Exploring and Analyzing Fifa's Datasets Using Python</li>
+                <li>Programming for Everybody (Getting Started with Python)</li>
+                <li>Introduction to Networking and Storage</li>
+                <li>Supervised Machine Learning</li>
+            </ul>
+        </div>
+    </section>
+    <section id="connect" class="connect">
+        <h2>Connect with Me</h2>
+        <div class="connect-container">
+            <a href="https://www.linkedin.com/in/ismail-khan007/" target="_blank" class="linkedin-link">
+                <i class="fab fa-linkedin"></i>
+                <span>Connect on LinkedIn</span>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
