--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <img src="Profile_2.jpg" alt="Ismail Khan">
                 </div>
                 <h1>Ismail Khan</h1>
-                <p>Data Engineer & Web Developer</p>
+                <p>Associate Data Engineer</p>
             </div>
         </div>
     </header>
     <section id="about" class="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer and web developer with experience in SQL, Docker, and web development. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.</p>
+            <p>Welcome to my portfolio website! I am Ismail Khan, a passionate data engineer with experience in SQL, Docker,and in Cloud. I have completed several courses on DataCamp and have worked on various projects involving databases, data analysis, and web development.</p>
         </div>
     </section>
     <section id="experience" class="experience">
