--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </ul>
                 </nav>
                 <div class="photo-circle">
-                    <img src="DP_8.png" alt="Ismail Khan">
+                    <img src="Profile_Linked.jpg" alt="Ismail Khan">
                 </div>
                 <h1>Ismail Khan</h1>
                 <p>Associate Data Engineer</p>
